# ChangeLog for dev-python/astropy-helpers
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*astropy-helpers-0.4.1 (08 Aug 2014)
*astropy-helpers-9999 (08 Aug 2014)

  08 Aug 2014; Joseph Jon Booker <joe@neoturbine.net>
  +astropy-helpers-0.4.1.ebuild, +astropy-helpers-9999.ebuild, +metadata.xml:
  dev-python/astropy-helpers: Add astropy-helpers package