@@ -1,1 +1,2 @@
 DIST astropy-helpers-0.4.1.tar.gz 98477 SHA256 0b4e47e535e7226d8795efb9e9453cac9343759058970a20734e66f443074577 SHA512 85975268372624bec4024dfbe560ef820bda308db898919c4d29643f10df11636f4996a8ff3f2fb7deece44f88963ddb0c8ca231e030713cf17db7503ceae42e WHIRLPOOL b37fa02ebe3e750052a9681e1e8a3a0aa9eede1909e69c70e2004ba738139707e1a0c21797681454ee782a6543bc8808b8de574d60aba601d228966c8659bb9f
+DIST astropy-helpers-0.4.3.tar.gz 99817 SHA256 5ff2c66c585cf19e086884d6f7032cb4c880eee6decd1cca36cf7c154284ca7e SHA512 3b8421a2bda128f697d04b0fe371ba9c6bb5ec4d7e75fc31df6dd37c08efc2779fb7cf766db3d57c926a889eaa769b675ed3336815fef15af164dd19d4311326 WHIRLPOOL 7a93aea1b557e9fab91ddc59486cebc59ebd5e96b4c8086f1b6c82967d6df48452a3ecc050a047faf5feb488fb6379944b1fabd2462dc704d5e74658cae4f1ab
