@@ -1,0 +1,28 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
+inherit distutils-r1
+
+if [ ${PV} == "9999" ] ; then
+	inherit git-r3
+	EGIT_REPO_URI="https://github.com/astropy/${PN}.git"
+else
+	SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+	KEYWORDS="~amd64"
+fi
+
+DESCRIPTION="Helpers for Astropy and Affiliated packages"
+HOMEPAGE="https://github.com/astropy/astropy-helpers"
+
+LICENSE="BSD"
+SLOT="0"
+IUSE=""
+
+python_prepare_all() {
+	sed -e '/import ah_bootstrap/d' -i setup.py || die "Removing ah_bootstrap failed"
+	distutils-r1_python_prepare_all
+}
