@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*astropy-helpers-0.4.3 (18 Nov 2014)
+
+  18 Nov 2014; Joseph Jon Booker <joe@neoturbine.net>
+  +astropy-helpers-0.4.3.ebuild:
+  dev-python/astropy-helpers: Version bump to 0.4.3
+
 *astropy-helpers-0.4.1 (08 Aug 2014)
 *astropy-helpers-9999 (08 Aug 2014)
 
